--- a/controller.yaml
+++ b/controller.yaml
@@ -44,6 +44,10 @@ spec:
           httpGet:
             path: /healthz
             port: http
+        securityContext:
+          readOnlyRootFilesystem: true
+          runAsNonRoot: true
+          runAsUser: 1001
         stdin: false
         tty: false
         volumeMounts:
